force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>What&apos;s the main line of business on this opportunity?</inlineHelpText>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Care</fullName>
            </value>
            <value>
                <fullName>Air Treatment</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Consumables and Equipment</fullName>
            </value>
            <value>
                <fullName>Disinfection Service</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Fixture Cleaning</fullName>
            </value>
            <value>
                <fullName>Hand Sanitizer</fullName>
            </value>
            <value>
                <fullName>Personal Hygiene</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>PPE</fullName>
            </value>
            <value>
                <fullName>Sani-Restore</fullName>
            </value>
            <value>
                <fullName>Sani Guard</fullName>
            </value>
            <value>
                <fullName>Soap</fullName>
            </value>
            <value>
                <fullName>Toilet Seat Cleaner</fullName>
            </value>
            <value>
                <fullName>Urinal &amp; Toilet Hygiene</fullName>
            </value>
            <value>
                <fullName>Urinal Screen &amp; AntiSplash</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Washroom Automation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>