force-app/main/default/objects/Opportunity/fields/OpptyProductHash__c.field-meta.xml
<CustomField>
    <fullName>OpptyProductHash__c</fullName>
    <description>A concatenated string created from all oppty products. The format is product1.Id;Qty|product2.Id;Qty.</description>
    <label>OpptyProductHash</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>