force-app/main/default/objects/Opportunity/fields/PDF_Extract__c.field-meta.xml
<CustomField>
    <fullName>PDF_Extract__c</fullName>
    <label>PDF Extract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pest</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>