force-app/main/default/objects/Opportunity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <formula>Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>