force-app/main/default/objects/Opportunity/fields/PO_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Expiry_Date__c</fullName>
    <label>PO Expiry Date</label>
    <type>Date</type>
</CustomField>