force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO #</label>
    <length>22</length>
    <type>Text</type>
</CustomField>