force-app/main/default/objects/Opportunity/fields/Quote_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry_Days__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <inlineHelpText>The number of days that a Quote is valid for. Sets the Expiration Date on the DocuSign / Quote PDF.  Also determines when the DocuSign envelope will be voided.  The customer is automatically sent a reminder email 3 days before the DocuSign envelope expires.</inlineHelpText>
    <label>Quote Expiry (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>