force-app/main/default/objects/Opportunity/fields/Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_Notes__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <label>Quote Notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>