force-app/main/default/objects/Opportunity/fields/Quote_With_Annual_Totals_TableHide__c.field-meta.xml
<CustomField>
    <fullName>Quote_With_Annual_Totals_TableHide__c</fullName>
    <description>used for Conga template building &quot;TableHide (using an Operator)&quot; feature.  https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <formula>IF( Quote_With_Annual_Totals__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote With Annual Totals TableHide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>