force-app/main/default/objects/Opportunity/fields/QuoteContactID__c.field-meta.xml
<CustomField>
    <fullName>QuoteContactID__c</fullName>
    <description>Used for DocuSign - https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity?menu=filter&amp;filter=label:Shail

formely OpptyContact__c</description>
    <formula>CASESAFEID(Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ContactID</label>
    <type>Text</type>
</CustomField>