force-app/main/default/objects/Opportunity/fields/Record_Count_for_New_Business__c.field-meta.xml
<CustomField>
    <fullName>Record_Count_for_New_Business__c</fullName>
    <formula>IF( New_Business__c = TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Count for New Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>