force-app/main/default/objects/Opportunity/fields/Rental_Agreement_Term__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Term__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity
Used in template</description>
    <inlineHelpText>Number of months</inlineHelpText>
    <label>Rental Agreement Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>