force-app/main/default/objects/Opportunity/fields/ringdna100__First_Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__First_Outbound_Call__c</fullName>
    <label>First Outbound Call</label>
    <type>DateTime</type>
</CustomField>