force-app/main/default/objects/Opportunity/fields/ringdna100__LendingTreeEmailFirstTime__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__LendingTreeEmailFirstTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lending Tree Email First Time</label>
    <type>Checkbox</type>
</CustomField>