force-app/main/default/objects/Opportunity/fields/ringdna100__Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prev 1</fullName>
            </value>
            <value>
                <fullName>Prev 2</fullName>
            </value>
            <value>
                <fullName>Prev 3</fullName>
            </value>
            <value>
                <fullName>Prev 4</fullName>
            </value>
            <value>
                <fullName>Prev 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>