force-app/main/default/objects/Opportunity/fields/ringdna100__stageOpenFirstTime__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__stageOpenFirstTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Open First Time</label>
    <type>Checkbox</type>
</CustomField>