force-app/main/default/objects/Opportunity/fields/ringdna100__Time_Since_Last_Email_Attempt_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Time_Since_Last_Email_Attempt_Minutes__c</fullName>
    <formula>IF(ISBLANK(ringdna100__Last_Email_Attempt__c), NULL, (NOW() - ringdna100__Last_Email_Attempt__c) * 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Email Attempt (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>