force-app/main/default/objects/Opportunity/fields/SE_Opportunity_Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>SE_Opportunity_Bundle_Type__c</fullName>
    <label>Opportunity Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SE_Opportunity_Bundle_Type</valueSetName>
    </valueSet>
</CustomField>