force-app/main/default/objects/Opportunity/fields/Seasonal_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked indicates the presence of a Seasonal Order with the customer, this would create a Internal Ticket requesting the creation of an Order to meet with such requirements. If not there will not be Seasonal Order with the customer.</inlineHelpText>
    <label>Seasonal Requirements</label>
    <type>Checkbox</type>
</CustomField>