force-app/main/default/objects/Opportunity/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <label>Ship To Name</label>
    <type>TextArea</type>
</CustomField>