force-app/main/default/objects/Opportunity/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>