force-app/main/default/objects/Opportunity/fields/Specialist_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box off if you had an SME assist in developing the opportunity</description>
    <label>Specialist Engaged Opportunity</label>
    <type>Checkbox</type>
</CustomField>