force-app/main/default/objects/Opportunity/fields/Total_Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Installation_Price__c</fullName>
    <label>Total Installation Price</label>
    <summarizedField>OpportunityLineItem.Total_Installation_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>