force-app/main/default/objects/Opportunity/fields/Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Revenue__c</fullName>
    <label>Total Monthly Revenue</label>
    <summarizedField>OpportunityLineItem.Total_Monthly_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>