force-app/main/default/objects/Opportunity/fields/Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price__c</fullName>
    <label>Total Purchase Price</label>
    <summarizedField>OpportunityLineItem.Total_Purchase_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>