force-app/main/default/objects/Opportunity/recordTypes/Additional_Opportunities_Penetration.recordType-meta.xml
<RecordType>
    <fullName>Additional_Opportunities_Penetration</fullName>
    <active>true</active>
    <businessProcess>Additional Opportunities - Penetration Process</businessProcess>
    <description>New subcategory additions (i.e. location has personal hygiene disposal service and the new opportunity adds air care)</description>
    <label>Additional Subcategories - Penetration</label>
</RecordType>