force-app/main/default/objects/Opportunity/validationRules/Account_Must_Not_Be_Bill_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_Not_Be_Bill_To</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Account.Is_Bill_To__c,
Account.isParent__c,
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Cannot create an Opportunity on a Bill-To Account.</errorMessage>
</ValidationRule>