force-app/main/default/objects/Opportunity/validationRules/Account_On_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_On_Hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  Account.On_Hold__c,
  IsWon,
  ISCHANGED( IsWon )
)</errorConditionFormula>
    <errorMessage>This opportunity cannot be closed won, the account is on hold.</errorMessage>
</ValidationRule>