force-app/main/default/objects/Opportunity/validationRules/check_operating_hours_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>check_operating_hours_not_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
OR( ISNEW() ,  ISCHANGED(ForecastCategoryName) ),
   (RecordTypeId != 
   $Setup.Field_Service_Settings__c.Opportunity_RecordType_Frequency_Change__c) , 
   OR( 
     ISPICKVAL(ForecastCategoryName , &apos;Closed&apos;) , 
     ISPICKVAL(ForecastCategoryName , &apos;Commit&apos;) 
   ),ISBLANK( Account.OperatingHoursId )
  )</errorConditionFormula>
    <errorMessage>Please fill in the Operating Hours (Standard field) field of the associated Shipping Account.</errorMessage>
</ValidationRule>