force-app/main/default/objects/Opportunity/validationRules/check_parent_billing_address_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>check_parent_billing_address_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Account.ParentId )) ,
OR( ISNEW() ,  ISCHANGED(ForecastCategoryName) ),
(RecordTypeId !=
$Setup.Field_Service_Settings__c.Opportunity_RecordType_Frequency_Change__c) ,
OR(
ISPICKVAL(ForecastCategoryName , &apos;Closed&apos;) ,
ISPICKVAL(ForecastCategoryName , &apos;Commit&apos;)
),
AND(ISBLANK(  Account.Parent.BillingCity  ), ISBLANK(  Account.Parent.BillingStreet  )
, ISBLANK(  Account.Parent.BillingPostalCode  ), ISBLANK(  Account.Parent.BillingState  ), ISBLANK(  Account.Parent.BillingCountry))
)</errorConditionFormula>
    <errorMessage>Please ensure that associated Billing Account has all Billing Address Fields filled in before switching Opportunity to Commit/Closed Forecast Categories.</errorMessage>
</ValidationRule>