force-app/main/default/objects/Opportunity/validationRules/CPQ_Cannot_save_without_shipping_postal.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Cannot_save_without_shipping_postal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( Account.FSA_Mapping__c ),
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Cannot save the opportunity or line items unless the related account has a valid shipping postal code.</errorMessage>
</ValidationRule>