force-app/main/default/objects/Opportunity/validationRules/CPQ_Deal_Score_too_low_for_Signed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Deal_Score_too_low_for_Signed_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IF(TEXT(StageName)  &lt;&gt;  &apos;Signed Awaiting Survey Approval&apos; &amp;&amp; TEXT(StageName)  &lt;&gt;  &apos;Signed&apos; &amp;&amp; TEXT(StageName)  &lt;&gt;  &apos;Signed - Submit for Frequency Change&apos;, false, IF(NOT(CPQ2_CCW__c), true, false)),
   ($Profile.Name &lt;&gt; &apos;Sales Operations&apos;),
   ($Profile.Name &lt;&gt; &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>Cannot set Opportunity Stage to &apos;Signed Awaiting Survey Approval&apos; or &quot;&apos;Signed - Submit for Frequency Change&quot; or &quot;Signed&quot; unless Approval Status is &apos;Approved&apos;</errorMessage>
</ValidationRule>