force-app/main/default/objects/Opportunity/validationRules/Equipment_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipment_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Opportunity_Type__c )=&apos;Equipment&apos;,
ISBLANK(TEXT( Equipment_Type__c )),
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>Equipment_Type__c</errorDisplayField>
    <errorMessage>If line of business is equipment, the equipment type must not be blank.</errorMessage>
</ValidationRule>