force-app/main/default/objects/Opportunity/validationRules/Lead_Source_Other_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Other_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(LeadSource, &quot;Other&quot;),
    ISBLANK( Lead_Source_Additional_Info__c ),
    $Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Additional_Info__c</errorDisplayField>
    <errorMessage>Please provide more details if the Lead Source is set to &quot;Other&quot;</errorMessage>
</ValidationRule>