force-app/main/default/objects/Opportunity/validationRules/Mandatory_AP_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_AP_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
  AND(
    Account.Is_Bill_To__c, 
    ISBLANK(Account.A_P_Contact_Name__c), 
    OR (ISPICKVAL( ForecastCategoryName, &quot;Commit&quot;), IsWon),
    $Profile.Name != &apos;System Administrator&apos;
  
  ), 
  AND(
    NOT(Account.Is_Bill_To__c), 
    ISBLANK(Account.Parent.A_P_Contact_Name__c), 
    OR (ISPICKVAL( ForecastCategoryName, &quot;Commit&quot;), IsWon),
    $Profile.Name != &apos;System Administrator&apos;
  )
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>A/P Contact Name is required for customers</errorMessage>
</ValidationRule>